/cp 2018-02-20  Paolo Carlini  <paolo.carlini@oracle.com>

PR c++/84446
	* parser.c (cp_parser_init_declarator): Don't call start_lambda_scope
	on error_mark_node.

/testsuite
2018-02-20  Paolo Carlini  <paolo.carlini@oracle.com>

	PR c++/84446
	* g++.dg/cpp0x/lambda/lambda-ice27.C: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@257841 138bc75d-0d04-0410-961f-82ee72b054a4